--- a/reverso/WebContent/components/palindrome/palindromes.html
+++ b/reverso/WebContent/components/palindrome/palindromes.html
@@ -19,7 +19,7 @@
 		<div class="row">
 			<div class="col-md-3 ui-slider">
 				Turnaround chars: even: {{pc.midpoint.text}}, odd:
-				{{(pc.midpoint.text - 1) > 0 ? pc.midpoint.text - 1 : 0}} <br>
+				{{(pc.midpoint.text - 1) > 0 ? pc.midpoint.text - 1 : 0}} 
 				<br>
 				<rzslider rz-slider-model="pc.midpoint.text"
 					rz-slider-options="plc.turnaroundLengthSlider.options"></rzslider>
